<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="${relativePackage}.${activityClass}">
	
    <!-- begin main container -->
    
	<LinearLayout
	   	tools:ignore="UselessParent"
	   	android:layout_width="fill_parent"
	   	android:layout_height="fill_parent"
	    android:orientation="vertical">
	    
	    <!-- upper side -->
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1.2"
	        android:orientation="vertical">
	        
	        <!-- top panel -->
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="52dip"
	            android:orientation="horizontal"
	            android:baselineAligned="true">
	            
	            <!-- first column -->
	            
	            <LinearLayout
	            	android:layout_width="0dp"
	            	android:layout_height="fill_parent"
	            	android:orientation="horizontal"
	            	android:layout_weight="1"
	            	android:gravity="left|top">
	                
	                <ImageButton
			            android:id="@+id/main_activity_left_blinker_button"
			            android:layout_marginTop="5dip"
			            android:layout_marginLeft="10dip"
			            android:layout_width="40dp"
			            android:layout_height="40dp"
			            android:src="@drawable/left_blinker_button"
			            android:background="#00000000"
			            android:contentDescription="@string/main_activity_left_blinker_button_description"
			            android:scaleType="fitCenter"></ImageButton>
	                
	            </LinearLayout>
	            
	            <!-- /first column -->
	            
	            <!-- second column -->
	            
	            <LinearLayout
	            	android:layout_width="0dp"
	            	android:layout_height="fill_parent"
	            	android:orientation="horizontal"
	            	android:layout_weight="1"
	            	android:gravity="center|top">
	                
	                <ImageButton
			            android:id="@+id/main_activity_headlights_button"
			            android:layout_marginTop="5dip"
			            android:layout_marginLeft="10dip"
			            android:layout_width="40dp"
			            android:layout_height="40dp"
			            android:src="@drawable/headlights_button"
			            android:background="#00000000"
			            android:contentDescription="@string/main_activity_headlights_button_description"
			            android:scaleType="fitCenter"></ImageButton>
	                
	            </LinearLayout>
	            
	            <!-- /second column -->
	            
	            <!-- third column -->
	            
	            <LinearLayout
	            	android:layout_width="0dp"
	            	android:layout_height="fill_parent"
	            	android:layout_weight="1"
	            	android:orientation="horizontal"
	            	android:gravity="center|top">
	                
	                <ImageButton
			            android:id="@+id/main_activity_horn_button"
			            android:layout_marginTop="5dip"
			            android:layout_marginRight="10dip"
			            android:layout_width="40dp"
			            android:layout_height="40dp"
			            android:src="@drawable/horn_button"
			            android:background="#00000000"
			            android:contentDescription="@string/main_activity_horn_button_description"
			            android:scaleType="fitCenter"></ImageButton>
	                
	            </LinearLayout>
	            
	            <!-- /third column -->
	            
	            <!-- fourth column -->
	            
	            <LinearLayout
	            	android:layout_width="0dp"
	            	android:layout_height="fill_parent"
	            	android:layout_weight="1"
	            	android:orientation="horizontal"
	            	android:gravity="center|top">
	                
	                <ImageButton
			            android:id="@+id/main_activity_siren_button"
			            android:layout_marginTop="5dip"
			            android:layout_marginRight="10dip"
			            android:layout_width="40dp"
			            android:layout_height="40dp"
			            android:src="@drawable/siren_button"
			            android:background="#00000000"
			            android:contentDescription="@string/main_activity_siren_button_description"
			            android:scaleType="fitCenter"></ImageButton>
	                
	            </LinearLayout>
	            
	            <!-- /fourth column -->
	            
	            <!-- fifth column -->
	            
	            <LinearLayout
	            	android:layout_width="0dp"
	            	android:layout_height="fill_parent"
	            	android:layout_weight="1"
	            	android:orientation="horizontal"
	            	android:gravity="center|top">
	                
	                <ImageButton
			            android:id="@+id/main_activity_emergency_lights_button"
			            android:layout_marginTop="5dip"
			            android:layout_marginRight="10dip"
			            android:layout_width="40dp"
			            android:layout_height="40dp"
			            android:src="@drawable/emergency_lights_button"
			            android:background="#00000000"
			            android:contentDescription="@string/main_activity_emergency_lights_button_description"
			            android:scaleType="fitCenter"></ImageButton>
	                
	            </LinearLayout>
	            
	            <!-- /fifth column -->
	            
	            <!-- sixth column -->
	            
	            <LinearLayout
	            	android:layout_width="0dp"
	            	android:layout_height="fill_parent"
	            	android:layout_weight="1"
	            	android:orientation="horizontal"
	            	android:gravity="right|top">
	                
	                <ImageButton
			            android:id="@+id/main_activity_right_blinker_button"
			            android:layout_marginTop="5dip"
			            android:layout_marginRight="10dip"
			            android:layout_width="40dp"
			            android:layout_height="40dp"
			            android:src="@drawable/right_blinker_button"
			            android:background="#00000000"
			            android:contentDescription="@string/main_activity_right_blinker_button_description"
			            android:scaleType="fitCenter"></ImageButton>
	                
	            </LinearLayout>
	            
	            <!-- /sixth column -->
	            
	        </LinearLayout>
	        
	        <!-- /top panel -->
	        
	    </LinearLayout>
	    
	    <!-- /upper side -->
	    
	    <!-- lower side -->
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.8"
	        android:orientation="horizontal"
	        android:baselineAligned="true">
	        
	        <!-- direction panel -->
	        
	        <LinearLayout
	            tools:ignore="NestedWeights"
	            android:layout_width="0dp"
	        	android:layout_height="fill_parent"
		        android:layout_weight="1"
	        	android:orientation="vertical">
	            
	            <!-- direction title container -->
	            
	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="0dp"
	                android:layout_weight="0.5"
	                android:gravity="center"
	                android:orientation="horizontal">
	                
	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="16sp"
	                    android:textColor="@color/main_activity_direction_title_color"
	                    android:text="@string/main_activity_direction_title"></TextView>
	                
	            </LinearLayout>
	            
	            <!-- /direction title container -->
	            
	            <!-- direction controller container -->
	            
	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1.3"
	                android:gravity="center">
	                
	                <SeekBar
	                    android:id="@+id/main_activity_direction_controller"
	                    android:layout_width="165dip"
	                    android:layout_height="wrap_content"
	                    android:progress="127"
	                    android:max="254"></SeekBar>
	                
	            </LinearLayout>
	            
	            <!-- /direction controller container -->
	            
	            <!-- gear container -->
	            
	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1.2"
	                android:orientation="horizontal"
	                android:baselineAligned="true">
	                
	                <!-- gear button container -->
	                
	                <LinearLayout
	                    android:layout_width="0dp"
	                    android:layout_height="fill_parent"
	                    android:layout_weight="0.75"
	                    android:orientation="horizontal"
	                    android:gravity="left|bottom">
	                    
	                    <ImageButton
				            android:id="@+id/main_activity_gear_button"
				            android:layout_marginBottom="5dip"
				            android:layout_marginLeft="10dip"
				            android:layout_width="40dp"
				            android:layout_height="40dp"
				            android:src="@drawable/first_gear_button"
				            android:background="#00000000"
				            android:contentDescription="@string/main_activity_gear_button_description"
				            android:scaleType="fitCenter"></ImageButton>
	                    
	                </LinearLayout>
	                
	                <!-- /gear button container -->
	                
	                <!-- gear title container -->
	                
	                <LinearLayout
	                    android:layout_width="0dp"
	                    android:layout_height="fill_parent"
	                    android:layout_weight="1.25"
	                    android:orientation="horizontal"
	                    android:gravity="center|bottom">
	                    
	                    <TextView
	                    	android:layout_marginBottom="5dip"
	                    	android:layout_width="wrap_content"
	                    	android:layout_height="wrap_content"
	                    	android:textSize="16sp"
	                    	android:textColor="@color/main_activity_gear_title_color"
	                    	android:text="@string/main_activity_gear_title"></TextView>
	                    
	                </LinearLayout>
	                
	                <!-- /gear title container -->
	                
	            </LinearLayout>
	            
	            <!-- /gear container -->
	            
	        </LinearLayout>
	        
	        <!-- /direction panel -->
	        
	        <!-- collision detection frame -->
	        
	        <RelativeLayout
	            android:layout_width="0dp"
	        	android:layout_height="fill_parent"
		        android:layout_weight="1"
	        	android:gravity="center">
	            
	            <!-- car image -->
	            
	            <ImageView
	                android:layout_width="120dip"
	                android:layout_height="120dip"
	                android:src="@drawable/car"
	                android:contentDescription="@string/main_activity_car_image_description"
	                android:scaleType="fitCenter"></ImageView>
	            
	            <!-- /car image -->
	            
	            <!-- collision sectors images -->
	            
	            <ImageView
	                android:id="@+id/main_activity_northwest_collision_sector"
	                android:layout_width="125dip"
	                android:layout_height="125dip"
	                android:src="@drawable/northwest_collision_sector"
	                android:contentDescription="@string/main_activity_upper_collision_sector_image_description"
	                android:scaleType="fitCenter"
	                android:alpha="0.0"></ImageView>
	            
	            <ImageView
	                android:id="@+id/main_activity_northeast_collision_sector"
	                android:layout_width="125dip"
	                android:layout_height="125dip"
	                android:src="@drawable/northeast_collision_sector"
	                android:contentDescription="@string/main_activity_lower_collision_sector_image_description"
	                android:scaleType="fitCenter"
	                android:alpha="0.0"></ImageView>
	            
	            <ImageView
	                android:id="@+id/main_activity_southwest_collision_sector"
	                android:layout_width="125dip"
	                android:layout_height="125dip"
	                android:src="@drawable/southwest_collision_sector"
	                android:contentDescription="@string/main_activity_left_collision_sector_image_description"
	                android:scaleType="fitCenter"
	                android:alpha="0.0"></ImageView>
	            
	            <ImageView
	                android:id="@+id/main_activity_southeast_collision_sector"
	                android:layout_width="125dip"
	                android:layout_height="125dip"
	                android:src="@drawable/southeast_collision_sector"
	                android:contentDescription="@string/main_activity_right_collision_sector_image_description"
	                android:scaleType="fitCenter"
	                android:alpha="0.0"></ImageView>
	            
	            <!-- /collision sectors images -->
	            
	        </RelativeLayout>
	        
	        <!-- /collision detection frame -->
	        
	        <!-- acceleration panel -->
	        
	        <LinearLayout
	            android:layout_width="0dp"
	        	android:layout_height="fill_parent"
		        android:layout_weight="1"
	        	android:orientation="vertical">
	            
	            <!-- acceleration title container -->
	            
	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="0dp"
	                android:layout_weight="0.5"
	                android:orientation="horizontal"
	                android:gravity="center">
	                
	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="16sp"
	                    android:textColor="@color/main_activity_acceleration_title_color"
	                    android:text="@string/main_activity_acceleration_title"></TextView>
	                
	            </LinearLayout>
	            
	            <!-- /acceleration title container -->
	            
	            <!-- acceleration controller container -->
	            
	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1.3"
	                android:gravity="center">
	                
	                <SeekBar
	                    android:id="@+id/main_activity_acceleration_controller"
	                    android:layout_width="165dip"
	                    android:layout_height="wrap_content"
	                    android:max="255"></SeekBar>
	                
	            </LinearLayout>
	            
	            <!-- /acceleration controller container -->
	            
	            <!-- acceleration/brake buttons container -->
	            
	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1.2"
	                android:orientation="horizontal"
	                android:baselineAligned="true">
	                
	                <!-- brake button container -->
	                
	                <LinearLayout
	                    tools:ignore="NestedWeights"
	                    android:layout_width="0dp"
	                    android:layout_height="fill_parent"
	                    android:layout_weight="1"
	                    android:orientation="horizontal"
	                    android:gravity="left|bottom">
	                    
	                    <ImageButton
				            android:id="@+id/main_activity_brake_button"
				            android:layout_marginBottom="5dip"
				            android:layout_marginLeft="10dip"
				            android:layout_width="40dp"
				            android:layout_height="40dp"
				            android:src="@drawable/brake_button"
				            android:background="#00000000"
				            android:contentDescription="@string/main_activity_brake_button_description"
				            android:scaleType="fitCenter"></ImageButton>
	                    
	                </LinearLayout>
	                
	                <!-- /brake button container -->
	                
	                <!-- accelerate button container -->
	                
	                <LinearLayout
	                    android:layout_width="0dp"
	                    android:layout_height="fill_parent"
	                    android:layout_weight="1"
	                    android:orientation="horizontal"
	                    android:gravity="right|bottom">
	                    
	                    <ImageButton
				            android:id="@+id/main_activity_accelerate_button"
				            android:layout_marginBottom="5dip"
				            android:layout_marginLeft="10dip"
				            android:layout_width="40dp"
				            android:layout_height="40dp"
				            android:src="@drawable/accelerate_button"
				            android:background="#00000000"
				            android:contentDescription="@string/main_activity_accelerate_button_description"
				            android:scaleType="fitCenter"></ImageButton>
	                    
	                </LinearLayout>
	                
	                <!-- /accelerate button container -->
	                
	            </LinearLayout>
	            
	            <!-- /acceleration/brake buttons container -->
	            
	        </LinearLayout>
	        
	        <!-- /acceleration panel -->
	        
	    </LinearLayout>
	    
	    <!-- /lower side -->
	    
	</LinearLayout>
	
	<!-- /main container -->
	
</RelativeLayout>
